driveline-fastify-nest-ts-api/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: driveline
  labels:
    name: driveline
    environment: production
